--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -67,6 +67,7 @@ margin-left:5px;
   width: 70px;
   height:38px;
   outline:none;
+  border-radius: 7px;
 }
 
 .submit_button:hover{
@@ -81,7 +82,7 @@ margin-left:5px;
 }
 
 .submit_button:hover:before{
-  border-bottom:  4px solid rgba(3,95,175, 0);
+
   transition: all 33ms;
   -moz-transition: all 33ms;
   -webkit-transition: all 33ms;
@@ -90,6 +91,7 @@ margin-left:5px;
 
 .submit_button:hover .button-content2  {
   box-shadow: 0px 4px 0px 0px rgba(3,95,175, 1);
+
   transition: all 33ms;
   -moz-transition: all 33ms;
   -webkit-transition: all 33ms;
@@ -108,6 +110,7 @@ margin-left:5px;
 .submit_button:active:hover {
   top:-4px;
   padding-bottom: -4px;
+    border-bottom:  4px solid rgba(3,95,175, 0);
 }
 
 .username{
@@ -137,6 +140,7 @@ outline: none;
   width: 70px;
   height:38px;
   outline:none;
+  border-radius: 5px;
 }
 
 .start_button:hover{
