--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@
 div{position:relative;}
 
 body {
-  background: #DBDBDB;
+  background: #EBEBFB;
   text-align:center;
   padding-top:60px;
   display: inline-block;
@@ -25,7 +25,7 @@ input[type="number"].custom {
   font-size:1.3em;
   font-family:Arial, sans-serif;
   color:#555;
-  border:solid 1px #fff;
+  border:solid 1px #ccc;
   margin:0 0 20px;
   border-radius:10px;
   outline: none;
@@ -38,12 +38,12 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 input:focus:invalid{
-  border-color: #d04f97;
+  border-color: #e07fb7;
   border-width: 2px;
 }
 
 input:focus:valid{
-  border-color: #1e94fb;
+  border-color: #6ec4ff;
   border-width: 2px;
 
 }
@@ -147,7 +147,6 @@ outline: none;
     vertical-align: -96px;
   height:38px;
   outline:none;
-  border-bottom: 3px solid rgba(3,95,175, 1);
   box-shadow: 0px 3px 0px 0px rgba(3,95,175, 1);
   transition: all 33ms;
   -moz-transition: all 33ms;
